single template file, some css added

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 	<head>
 		<title>Aleix Plademunt</title>
+
+		<meta charset="utf-8">
+
+		<link rel="stylesheet" href="/css/styles.css">
 	</head>
 	<body>
-		<a href="/yay" class="next">Next</a>
+		<a href="/please-please-please" class="next">Next</a>
 
 		<div class="text">
 			Aleix Plademunt
 		</div>
+
+		<script src="/js/scripts.js"></script>
 	</body>
 </html>
