--- a/template.html
+++ b/template.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<title><%= data.title %></title>
+
+		<meta charset="utf-8">
+
+		<link rel="stylesheet" href="/css/styles.css">
 	</head>
 	<body>
 		<a href="<%= data.next %>" class="next">Next</a>
@@ -9,5 +13,7 @@
 		<div class="text">
 			<%= data.title %>
 		</div>
+
+		<script src="/js/scripts.js"></script>
 	</body>
 </html>
