added some front JS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Arturo Castillo Delgado <19@8302.net> -->
 <html>
 	<head>
 		<title>Aleix Plademunt</title>
@@ -10,9 +11,7 @@
 	<body>
 		<a href="/please-please-please" class="next">Next</a>
 
-		<div class="text">
-			Aleix Plademunt
-		</div>
+		
 
 		<script src="/js/scripts.js"></script>
 	</body>
