--- a/template.html
+++ b/template.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Arturo Castillo Delgado <19@8302.net> -->
 <html>
 	<head>
 		<title><%= data.title %></title>
@@ -10,9 +11,9 @@
 	<body>
 		<a href="<%= data.next %>" class="next">Next</a>
 
-		<div class="text">
-			<%= data.title %>
-		</div>
+		<% _.each(data.files, function (file) { %>
+			<div data-src="<%= data.filepath %><%= file.src %>" data-alt="<%= data.title %>"></div>
+		<% }); %>
 
 		<script src="/js/scripts.js"></script>
 	</body>
