better data.json structure

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 		<title>Aleix Plademunt</title>
 
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="keywords" content="Aleix Plademunt, photography, Almost There, Ca l'Isidret Edicions, Mack Books">
 
 		<link rel="stylesheet" href="/css/styles.css">
 	</head>
 	<body>
-		<a href="/please-please-please" class="next">Next</a>
+		<a href="/my-cells" class="next">Next</a>
 
 		
 
