more styles, half data.json there, background-size: cover polyfill

--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 
 		<link rel="stylesheet" href="/css/styles.css">
 	</head>
-	<body>
+	<body class=" ">
 		<a href="/my-cells" class="next">Next</a>
 
 		
 
-		<div id="loading"></div>
+		<div id="loading-box"></div>
+
+		<script>
+		var preload = JSON.parse('[{"src":"01_my_cells_1.jpg","class":null,"position":0,"size":0,"z":1,"orientation":"landscape"}]');
+		var filepath = '/images/';
+		</script>
+		
 		<script src="/js/scripts.js"></script>
 	</body>
 </html>
