data.json complete, styles.css ok

--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
 		<a href="/my-cells" class="next">Next</a>
 
 		
+			<div class=" position-5 size-1 landscape" 
+				data-src="/images/00_ap.svg"
+				style="z-index:1;"></div>
+		
 
 		<div id="loading-box"></div>
 
 		<script>
+		
 		var preload = JSON.parse('[{"src":"01_my_cells_1.jpg","class":null,"position":0,"size":0,"z":1,"orientation":"landscape"}]');
+		
 		var filepath = '/images/';
 		</script>
 		
