better JS, no transitions at all

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 
 		
 			<div class=" position-5 size-1 landscape" 
-				data-src="/images/00_ap.svg"
+				data-src="00_ap.svg" 
+				data-action="" 
+				data-delay="" 
 				style="z-index:1;"></div>
+		
+
 		
 
 		<div id="loading-box"></div>
