--- a/book.html
+++ b/book.html
@@ -48,5 +48,15 @@
 				<p>Website by <a href="mailto:19@8302.net">Arturo Castillo Delgado</a></p>
 			</div>
 		</div>
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-43951175-1', 'aleixplademunt.com');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
