--- a/template.html
+++ b/template.html
@@ -31,5 +31,15 @@
 
 		<!--[if lte IE 7]><p>Your browser is too old.</p><![endif]-->
 		<noscript><p>This website needs JavaScript, it's 2013.</p></noscript>
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-43951175-1', 'aleixplademunt.com');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
