book style changes

--- a/book.html
+++ b/book.html
@@ -37,15 +37,18 @@
 
 			<!-- end slipsum code -->
 
-			<div class="apart">
+			<div class="apart centered small">
 				<p>Co-published by<br>
-				<a href="http://www.mackbooks.co.uk/books/75-Almost-There.html">MACK</a><br>
-				<a href="http://www.calisidretedicions.cat/04_llibre_almost_there.html">Ca l'isidret Edicions</a></p>
-				<p><a href="http://www.aleixplademunt.com">aleixplademunt.com</a></p>
+				<a href="http://www.calisidretedicions.cat/04_llibre_almost_there.html">Ca l'isidret Edicions</a><br>
+				<a href="http://www.mackbooks.co.uk/books/75-Almost-There.html">MACK</a></p>
 			</div>
 
-			<div class="apart">
-				<p>Website by <a href="mailto:19@8302.net">Arturo Castillo Delgado</a></p>
+			<div class="apart centered small">
+				<p><a href="http://www.aleixplademunt.com">www.aleixplademunt.com</a></p>
+			</div>
+
+			<div class="apart centered small">
+				<p>Website by<br><a href="mailto:19@8302.net">Arturo Castillo Delgado</a></p>
 			</div>
 		</div>
 
