--- a/book/es.html
+++ b/book/es.html
@@ -52,7 +52,7 @@
 
 			<div class="apart centered small">
 			<p>Libro coeditado por<br>
-				<a href="http://www.calisidretedicions.cat/04_llibre_almost_there.html">Ca l'isidret Edicions</a><br>
+				<a href="http://www.calisidretedicions.cat/04-almost-there.html">Ca l'isidret Edicions</a><br>
 				<a href="http://www.mackbooks.co.uk/books/75-Almost-There.html">MACK</a></p>
 			</div>
 
